--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,8 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        h1 Hello World!
+        <p>This is a simple HTML template.</p>
         
         <script src="" async defer></script>
     </body>
